--- a/app/src/main/res/layout/fancygifdialog.xml
+++ b/app/src/main/res/layout/fancygifdialog.xml
@@ -55,7 +55,7 @@
                         android:paddingLeft="16dp"
                         android:paddingRight="16dp"
                         android:textAlignment="center"
-                        android:textColor="#000000"
+                        android:textColor="#1B9BFB"
                         android:textSize="16dp"
                         tools:text="Granny eating chocolate dialog box" />
 
@@ -68,6 +68,7 @@
                         android:gravity="center"
                         android:paddingLeft="16dp"
                         android:paddingRight="16dp"
+                        android:textColor="#1B9BFB"
                         android:textAlignment="center"
                         android:textSize="14dp"
                         tools:text="This is a granny eating chocolate dialog box. This library is used to help you easily create fancy gify dialog." />
