--- a/app/src/main/res/layout/full_screen_custom_progress.xml
+++ b/app/src/main/res/layout/full_screen_custom_progress.xml
@@ -2,6 +2,7 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
@@ -43,10 +44,12 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#1B9BFB"
         android:textSize="25sp"
+        android:visibility="invisible"
         android:textStyle="bold"
-        android:text="Title" />
+        android:text="Title"
+        tools:ignore="NotSibling" />
 
     <TextView
         android:id="@+id/message"
@@ -58,6 +61,8 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:text="Description"
+        android:textColor="#1B9BFB"
+        android:visibility="invisible"
         android:textAlignment="center"
         android:textSize="18sp" />
 
@@ -69,18 +74,20 @@
         android:layout_above="@+id/loadingtext"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:indeterminateTint="#101010" />
+        android:indeterminateTint="#1B9BFB" />
 
     <TextView
         android:id="@+id/loadingtext"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="Loading Ads..."
+        android:text="Ad Loading . . ."
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:layout_marginBottom="50dp"
+        android:textColor="#1B9BFB"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </RelativeLayout>
