--- a/app/src/main/res/layout/loading_ads_full.xml
+++ b/app/src/main/res/layout/loading_ads_full.xml
@@ -2,6 +2,7 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
@@ -40,11 +41,13 @@
         android:gravity="center"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
+        android:visibility="invisible"
         android:text="Ads"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#1B9BFB"
         android:textSize="25sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:ignore="NotSibling" />
 
     <TextView
         android:id="@+id/message"
@@ -54,7 +57,9 @@
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:paddingLeft="16dp"
+        android:visibility="invisible"
         android:paddingRight="16dp"
+        android:textColor="#1B9BFB"
         android:text="Please Wait...."
         android:textAlignment="center"
         android:textSize="18sp" />
@@ -67,18 +72,20 @@
         android:layout_above="@+id/loadingtext"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:indeterminateTint="#101010" />
+        android:indeterminateTint="#1B9BFB" />
 
     <TextView
         android:id="@+id/loadingtext"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="Loading Ads..."
+        android:text="Ad Loading . . ."
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:layout_marginBottom="50dp"
+        android:visibility="visible"
+        android:textColor="#1B9BFB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </RelativeLayout>
