--- a/app/src/main/res/layout/loading_ads_inter.xml
+++ b/app/src/main/res/layout/loading_ads_inter.xml
@@ -54,10 +54,10 @@
                         android:paddingLeft="16dp"
                         android:paddingRight="16dp"
                         android:textAlignment="center"
-                        android:textColor="#000000"
+                        android:textColor="#1B9BFB"
                         android:textSize="22dp"
                         android:textStyle="bold"
-                        tools:text="Loading Ads . . ." />
+                        tools:text="Ad Loading . . ." />
 
                     <TextView
                         android:id="@+id/message"
@@ -69,7 +69,7 @@
                         android:paddingLeft="16dp"
                         android:paddingRight="16dp"
                         android:textAlignment="center"
-                        android:textColor="@color/gnt_gray"
+                        android:textColor="#1B9BFB"
                         android:textSize="14dp"
                         android:textStyle="bold"
                         tools:text="Wait While Loading Ads, Sorry for Inconvenience and Thank You for Support and Waiting. " />
